--- a/css/master.css
+++ b/css/master.css
@@ -24,7 +24,7 @@ button {
     max-width: 1200px;
     margin: 0 auto;
 }
-/* barra fissa top */
+/* stilizzazione bottone bianco arancio */
 .btn-wo {
     color: white;
     background-color: #ff7a59;
@@ -34,7 +34,6 @@ button {
     font-weight: 300;
     padding: 8px 20px;
 }
-/* fine barra fissa top */
 /* inizio container HEADER: logo + navbar */
 .header {
     height: 80px;
@@ -89,7 +88,7 @@ button {
     font-size: 15px;
     font-weight: 300;
 }
-
+/* stilizzazione bottone bianco e blu */
 .btn-wb {
     background-color: white;
     border: none;
@@ -102,7 +101,7 @@ button {
     right: 0;
     transform: translateY(-50%);
 }
-
+/* link su bottone */
 .btn-wb a {
     text-decoration: none;
     color: #33475b;
@@ -115,11 +114,13 @@ button {
 /* fine container FIRST */
 /* inizio container SECOND */
 .second {
-    background-color: #fff2ee; /* ho utilizzato il colore perchè il link dello sfondo mi dava una pagina vuota */
+    background-color: #fff2ee;
+    background-image: url('https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/home/2019/clouds-desktop.svg');
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
 .second .jumbotron {
-    background-image: url('https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/home/2019/clouds-desktop.svg');
     width: 37%;
     padding: 80px 0 100px;
 }
@@ -164,7 +165,7 @@ h1 {
 }
 
 .container.small {
-    width: 55%;
+    width: 50%;
     text-align: center;
 }
 
@@ -174,19 +175,6 @@ h1 {
 
 .powerful img {
     width: 260px;
-}
-
-.powerful h2 {
-    color: #33475b;
-    font-size: 30px;
-}
-
-.powerful p {
-    width: 80%;
-    color: #33475b;
-    font-weight: 300;
-    padding: 30px 0 50px;
-    margin: 0 auto;
 }
 /* div free-hub */
 .free-hub {
@@ -279,7 +267,7 @@ h1 {
 
 .content p {
     text-align: left;
-    padding-bottom: 20px;
+    padding: 0 10px 20px;
     border-bottom: 1px solid #e0e6ed;
 }
 
@@ -310,6 +298,79 @@ h1 {
 /* inizio container FOURTH */
 .fourth {
     background-image: linear-gradient(45deg, #00a4bd, #00bda5);
+}
+
+.fourth .jumbotron {
+    padding: 100px 100px 30px;
+}
+
+.fourth .jumbotron h2 {
+    color: #ffffff;
+}
+
+.fourth .subtitle {
+    color: #ffffff;
+}
+
+h2 {
+    color: #33475b;
+    font-size: 30px;
+}
+
+.subtitle {
+    width: 80%;
+    color: #33475b;
+    font-size: 13px;
+    font-weight: 300;
+    padding: 30px 0 50px;
+    margin: 0 auto;
+}
+
+/* stilizzazione tabella */
+
+.tabella {
+    padding-bottom: 100px;
+}
+
+.riquadro {
+    width: 25%;
+    float: left;
+    border-right: 2px solid white;
+    border-bottom: 2px solid white;
+    padding: 30px 10px;
+}
+
+.riquadro h2 {
+    color: white;
+    font-size: 40px;
+}
+
+.riquadro p {
+    font-size: 13px;
+    color: #ffffff;
+    font-weight: 300;
+}
+
+.small-plus {
+    font-weight: 300;
+    font-size: 15px;
+    vertical-align: middle;
+}
+
+.hubspot-symbols img {
+    height: 33px;
+}
+
+.riquadro-destra {
+    border-right: none;
+}
+
+.riga-sotto {
+    border-bottom: none;
+}
+
+#symbol-small {
+    height: 23px;
 }
 /* fine container FOURTH */
 /* inizio container FIFTH */
