--- a/css/master.css
+++ b/css/master.css
@@ -155,11 +155,15 @@ button {
     padding: 10px 25px;
     margin-right: 15px;
     font-size: 15px;
+}
+
+.first .btn-wb {
     position: absolute;
     top: 50%;
     right: 0;
     transform: translateY(-50%);
 }
+
 /* link su bottone */
 .btn-wb a {
     text-decoration: none;
@@ -515,7 +519,37 @@ h2 {
 .riquadro-elenco {
     width: 25%;
     float: left;
+    color: #ffffff;
+    padding-top: 100px;
 }
+
+.riquadro-elenco li {
+    text-transform: capitalize;
+    list-style: none;
+    line-height: 50px;
+    font-size: 15px;
+    font-size: 14px;
+    font-weight: 300;
+    color: #cbd6e2;
+}
+
+.icone li {
+    float: left;
+    width: 16%;
+    font-size: 20px;
+}
+
+.riquadro-elenco h5 {
+    font-size: 15px;
+}
+
+.riquadro-elenco ul li button {
+    font-size: 11px;
+    color: #34485c;
+    text-transform: capitalize;
+    padding: 10px 20px;
+}
+
 
 footer {
     border-top: 1px solid #7c98b6;
